--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-node_modules/
+#amplify-do-not-edit-begin
+build/
 dist/
+node_modules/
+amplify/
+aws-exports.js
+awsconfiguration.json
+amplifyconfiguration.json
+amplifyconfiguration.dart
+amplify-build-config.json
+amplify-gradle-config.json
+amplifytools.xcconfig
+.secret-*
+**.sample
+#amplify-do-not-edit-end
