--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,29 @@
-#amplify-do-not-edit-begin
-build/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# amplify
 dist/
-node_modules/
 amplify/
 aws-exports.js
 awsconfiguration.json
@@ -12,4 +34,3 @@ amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
 **.sample
-#amplify-do-not-edit-end
