--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
 /.pnp
 .pnp.js
 
 # testing
 /coverage
-
-# production
-/build
 
 # misc
 .DS_Store
@@ -22,9 +18,20 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# amplify
-dist/
+# amplify not covererd by auto gen rule
 amplify/
+
+#amplify-do-not-edit-begin
+amplify/\#current-cloud-backend
+amplify/.config/local-*
+amplify/logs
+amplify/mock-data
+amplify/mock-api-resources
+amplify/backend/amplify-meta.json
+amplify/backend/.temp
+build/
+dist/
+node_modules/
 aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
@@ -34,3 +41,4 @@ amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
 **.sample
+#amplify-do-not-edit-end
